@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-08-07 Steve
+	* Added some stuff in SusyD3PDAna for my muon truth checks
+	* Modified the SusyD3PDTest to use SusyD3PDAna rather than SusyNtInterface
+
 2012-08-02 Steve
 	* Changed btag weight MV1 to use the d3pd variable
 	* Tagging SusyCommon-00-00-29
